corpus/cpp/exception_handling/case-01/snapshots/gcc15_plus/dual_sink_structured/render.ci.txt
src/main.cpp:2:11: error: exception handling configuration or usage error
help: enable -fexceptions/-frtti or adjust the exception specification
why: exception handling disabled, use '[-fexceptions](https://gcc.gnu.org/onlinedocs/gcc-15.2.0/gcc/Code-Gen-Options.html#index-fexceptions)' to enable
| src/main.cpp:2:11
|     throw 1;
|           ^
other errors:
  - src/main.cpp:2:11: error: exception handling configuration or usage error
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output